refactor: 重构数据库，实现 获取验证码，注册和登录